--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,4 @@
+@import "tailwindcss";
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -40,3 +41,5 @@ a {
     color-scheme: dark;
   }
 }
+
+
